--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -3,14 +3,15 @@
   justify-content: center;
   align-items: center;
   padding: 0px 20px;
-  /* flex-direction: column; */
 }
 
 .image {
-  width: 50%;
-  height:50%;
+  width: 45%;
+  height:45%;
 }
 
 .description {
   font-family: "Old Standard TT", serif;
+  font-size: 18px;
+  padding: 25px;
 }
